Support for terminal profiles. Fixes #11503
- UI and service to manage terminal profiles
- Handle profiles in preferences according to VS Code schema
- API and contribution markup for contributing profiles and activation
event handling

contributed on behalf of STMicroelectronics

Signed-off-by: Thomas Mäder <t.s.maeder@gmail.com>

--- a/packages/core/i18n/nls.json
+++ b/packages/core/i18n/nls.json
@@ -445,12 +445,24 @@
       "confirmCloseNever": "Never confirm.",
       "enableCopy": "Enable ctrl-c (cmd-c on macOS) to copy selected text",
       "enablePaste": "Enable ctrl-v (cmd-v on macOS) to paste from clipboard",
+      "profileNew": "New Terminal...",
+      "profileDefault": "Choose Default Profile...",
+      "selectProfile": "Select a profile for the new terminal",
       "shellArgsLinux": "The command line arguments to use when on the Linux terminal.",
       "shellArgsOsx": "The command line arguments to use when on the macOS terminal.",
       "shellArgsWindows": "The command line arguments to use when on the Windows terminal.",
       "shellLinux": "The path of the shell that the terminal uses on Linux (default: '{0}'}).",
       "shellOsx": "The path of the shell that the terminal uses on macOS (default: '{0}'}).",
       "shellWindows": "The path of the shell that the terminal uses on Windows. (default: '{0}').",
+      "shell.deprecated": "This is deprecated, the new recommended way to configure your default shell is by creating a terminal profile in 'terminal.integrated.profiles.{0}' and setting its profile name as the default in 'terminal.integrated.defaultProfile.{0}'.",
+      "defaultProfile": "The default profile used on {0}",
+      "profiles": "The profiles to present when creating a new terminal. Set the path property manually with optional args. \n\nSet an existing profile to `null` to hide the profile from the list, for example: `{0}: null`.",
+      "profilePath": "The path of the shell that this profile uses.",
+      "profileSource": "A profile source that will auto detect the paths to the shell. Note that non-standard executable locations are not supported and must be created manually in a new profile.",
+      "profileArgs": "The shell arguments that this profile uses.",
+      "profileEnv": "An object with environment variables that will be added to the terminal profile process. Set to `null` to delete environment variables from the base environment.",
+      "profileIcon": "A codicon ID to associate with the terminal icon.  \nterminal-tmux:\"$(terminal-tmux)\"",
+      "profileColor": "A terminal theme color ID to associate with the terminal.",
       "terminate": "Terminate",
       "terminateActive": "Do you want to terminate the active terminal session?",
       "terminateActiveMultiple": "Do you want to terminate the {0} active terminal sessions?"
