--- a/packages/core/i18n/nls.ru.json
+++ b/packages/core/i18n/nls.ru.json
@@ -65,6 +65,7 @@
       "debugSessionActive": "Существует активный сеанс отладки, вы уверены, что хотите остановить его?",
       "debugSessionActiveMultiple": "Существуют активные сеансы отладки, вы уверены, что хотите остановить их?",
       "disassembly-view": {
+        "disassembly": "Демонтаж",
         "show-source-code": "Показать исходный код в режиме просмотра разборки."
       },
       "instruction-breakpoint": "Точка останова инструкции",
@@ -161,11 +162,13 @@
       "files.autoSave.onWindowChange": "Редактор с изменениями автоматически сохраняется, когда окно теряет фокус.",
       "formatOnSaveTimeout": "Тайм-аут в миллисекундах, по истечении которого форматирование, выполняемое при сохранении файла, отменяется.",
       "persistClosedEditors": "Управляет тем, сохранять ли историю закрытых редакторов для рабочей области при перезагрузке окна.",
+      "readOnly": "Только чтение",
       "showAllEditors": "Показать все открытые редакторы",
       "splitHorizontal": "Раздельный редактор Горизонтальный",
       "splitVertical": "Раздельный редактор Вертикальный",
       "status-bar-pin": "Добавить в строку состояния",
-      "status-bar-unpin": "Удалить из строки состояния"
+      "status-bar-unpin": "Удалить из строки состояния",
+      "toggleStickyScroll": "Переключить залипание прокрутки"
     },
     "file-search": {
       "toggleIgnoredFiles": " (Нажмите {0}, чтобы показать/скрыть игнорируемые файлы)"
