added localization to "preparing download" Message; Also added translations for newly localized values for german and english
Signed-off-by: Jonah Iden <jonah.iden@typefox.io>

--- a/packages/core/i18n/nls.de.json
+++ b/packages/core/i18n/nls.de.json
@@ -180,6 +180,8 @@
     },
     "filesystem": {
       "copyDownloadLink": "Download-Link kopieren",
+      "prepareDownloadLink": "Download-Link wird vorbereitet...",
+      "prepareDownload": "Download wird vorbereitet...",
       "dialog": {
         "initialLocation": "Zum Ausgangsort gehen",
         "multipleItemMessage": "Sie können nur ein Element auswählen",
